# Neuro-Psyche

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.bat  setup.sh
model_one_asd/: asd_model.py  download_data.py  test.py
model_three_depression/: depression_model.py  test.py
model_three_schizophrenia/: schizophrenia_model.py  test.py
model_three_schizophrenia/saved_models/: Schizophrenia_classifier.joblib
model_two_depression/: depression_model.py  test.py
model_two_depression/depression_model/: depression_model.joblib
