[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "neuro-psyche"
version = "1.0.0"
description = "Neuro Psyche - fMRI-based detection tool for neurological conditions (ASD, Depression, Schizophrenia, ADHD)"
authors = [
    "Mennahtullah Mabrouk <mennahtulla.mabrouk@ejust.edu.eg>",
]
license = "MIT"
readme = "README.md"
keywords = ["fmri", "neuroimaging", "asd", "depression", "schizophrenia", "adhd", "medical-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

# Core dependencies
Markdown = "^3.8"
MarkupSafe = "^3.0.2"
PyYAML = "^6.0.2"
Pygments = "^2.19.1"
Werkzeug = "^3.1.3"
absl-py = "^2.3.0"
certifi = "^2025.4.26"
charset-normalizer = "^3.4.2"
click = ">=7.1.1,<7.2.0"
contourpy = "^1.3.2"
cycler = "^0.12.1"
filelock = "^3.18.0"
flatbuffers = "^25.2.10"
fonttools = "^4.58.4"
fsspec = "^2025.5.1"
gast = "^0.6.0"
grpcio = "^1.71.0"
h5py = "^3.13.0"
huggingface-hub = "^0.32.4"
idna = "^3.10"
imbalanced-learn = "^0.10.1"
joblib = "^1.5.2"
kaggle = "^1.7.4.5"
kiwisolver = "^1.4.8"
lxml = "^5.4.0"
markdown-it-py = "^3.0.0"
matplotlib = "^3.10.3"
mdurl = "^0.1.2"
ml_dtypes = ">=0.3.1,<0.4.0"
mpmath = "^1.3.0"
namex = "^0.1.0"
networkx = "^3.4.2"
nibabel = "^5.3.2"
nilearn = "^0.11.1"
numpy = "^1.26.4"
opt_einsum = "^3.4.0"
optree = "^0.15.0"
packaging = "^24.2"
pandas = "^2.2.3"
pillow = "^11.2.1"
pluggy = "^1.5.0"
protobuf = "^4.25.7"
pydot = "^4.0.1"
pyparsing = "^3.2.3"
python-dateutil = "^2.9.0.post0"
python-slugify = "^8.0.4"
pytz = "^2025.2"
regex = "^2024.11.6"
requests = "^2.32.3"
rich = "^14.0.0"
safetensors = "^0.5.3"
scikit-learn = "^1.2.2"
scipy = "^1.15.3"
seaborn = "^0.13.2"
six = "^1.17.0"
sympy = "^1.14.0"
tensorboard = ">=2.16,<2.17"
tensorboard-data-server = "^0.7.2"
termcolor = "^3.1.0"
text-unidecode = "^1.3"
threadpoolctl = "^3.6.0"
tokenizers = "^0.21.1"
torch = "^2.8.0"
tqdm = "^4.67.1"
transformers = "^4.52.4"
typer = "^0.3.2"
typing_extensions = "^4.13.2"
tzdata = "^2025.2"
urllib3 = "^2.4.0"
webencodings = "^0.5.1"
wrapt = "^1.17.2"
xgboost = "^3.0.2"

# macOS-specific TensorFlow
tensorflow-macos = "^2.20.3"
tensorflow-metal = "^1.2.0"
tensorflow = "^2.20.0"

# GUI dependencies
PyQt5 = "^5.15.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
coverage = "^7.8.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'